--- a/index.html
+++ b/index.html
@@ -1,194 +1,238 @@
-essencias = [
-    "Algodão", "Baunilha", "Bergamota", "Café com Chocolate", "Canela", "Cappuccino",
-    "Capim Limão", "Cassis e Hibisco", "Cereja e Avelã", "Chá Verde", "Flor de Cerejeira",
-    "Folhas de Figo", "Lavanda Francesa", "Melancia", "Morango", "Mousse de Maracujá",
-    "Oceano", "Pistache", "Rosas", "Zimbro e Madeira Guaiac"
-]
-
-essencias_options = "\n".join([f'<option value="{e}">{e}</option>' for e in essencias])
-
-html_restore = f"""
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-    <meta charset="UTF-8">
-    <title>Brilho Alado</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <style>
-        body {{
-            font-family: 'Segoe UI', sans-serif;
-            background-color: #f0f6ff;
-            color: #333;
-            padding: 20px;
-            margin: 0;
-        }}
-        h1 {{
-            text-align: center;
-            color: #5f9ea0;
-        }}
-        .produto, .carrinho {{
-            background-color: #fff;
-            padding: 20px;
-            border-radius: 8px;
-            margin: 20px auto;
-            max-width: 400px;
-            box-shadow: 0 0 10px rgba(0,0,0,0.05);
-        }}
-        .produto img {{
-            display: block;
-            margin: 0 auto 10px;
-            width: 50%;
-            border-radius: 8px;
-        }}
-        .produto h3, .produto p {{
-            text-align: center;
-        }}
-        .quantidade {{
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            gap: 10px;
-            margin: 10px 0;
-        }}
-        .quantidade input {{
-            width: 40px;
-            text-align: center;
-        }}
-        button {{
-            background-color: #a3d2ff;
-            border: none;
-            padding: 10px 15px;
-            border-radius: 4px;
-            font-weight: bold;
-            cursor: pointer;
-        }}
-        .modal {{
-            display: none;
-            position: fixed;
-            z-index: 1;
-            left: 0;
-            top: 0;
-            width: 100%;
-            height: 100%;
-            background-color: rgba(0,0,0,0.4);
-        }}
-        .modal-content {{
-            background-color: #fff;
-            margin: 20% auto;
-            padding: 20px;
-            border-radius: 8px;
-            width: 90%;
-            max-width: 300px;
-        }}
-        .close {{
-            float: right;
-            font-size: 20px;
-            cursor: pointer;
-        }}
-    </style>
+  <meta charset="UTF-8" />
+  <title>Brilho Alado</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <style>
+    body {
+      font-family: 'Segoe UI', sans-serif;
+      background-color: #f0f6ff;
+      color: #333;
+      margin: 0;
+      padding: 20px;
+    }
+    h1 {
+      color: #5f9ea0;
+      text-align: center;
+    }
+    .produto, .carrinho {
+      background-color: #ffffff;
+      border: 1px solid #dfe6e9;
+      border-radius: 8px;
+      padding: 20px;
+      margin: 20px auto;
+      max-width: 400px;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.05);
+    }
+    .produto img {
+      width: 50%;
+      display: block;
+      margin: 0 auto 10px auto;
+      border-radius: 8px;
+    }
+    .produto h3, .produto p {
+      text-align: center;
+      margin: 5px 0;
+    }
+    .quantidade {
+      display: flex;
+      align-items: center;
+      gap: 10px;
+      justify-content: center;
+      margin: 10px 0;
+    }
+    .quantidade input {
+      width: 40px;
+      text-align: center;
+    }
+    button {
+      background-color: #a3d2ff;
+      border: none;
+      border-radius: 4px;
+      padding: 10px 15px;
+      color: #000;
+      cursor: pointer;
+      font-weight: bold;
+    }
+    .remover {
+      background-color: #ffb3b3;
+      font-size: 0.9em;
+      padding: 5px 10px;
+    }
+    .limpar-btn {
+      background-color: #ffc9c9;
+      margin-top: 10px;
+    }
+    .modal {
+      display: none;
+      position: fixed;
+      z-index: 1;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      overflow: auto;
+      background-color: rgba(0,0,0,0.4);
+    }
+    .modal-content {
+      background-color: #fff;
+      margin: 15% auto;
+      padding: 20px;
+      border: 1px solid #888;
+      width: 90%;
+      max-width: 300px;
+      border-radius: 8px;
+    }
+    .close {
+      color: #aaa;
+      float: right;
+      font-size: 28px;
+      font-weight: bold;
+      cursor: pointer;
+    }
+  </style>
 </head>
 <body>
+  <h1>Brilho Alado</h1>
 
-<h1>Brilho Alado</h1>
-
-<div class="produto">
-    <img src="imagens/Vela_Cappuccino.jpg" alt="Vela Aromática Cappuccino">
+  <div class="produto">
+    <img src="imagens/Vela_Cappuccino.jpg" alt="Vela Aromática Cappuccino" />
     <h3>Vela Aromática Cappuccino</h3>
     <p>R$ 65,00</p>
     <div class="quantidade">
-        <button onclick="alterarQtd(-1)">-</button>
-        <input type="number" id="quantidade" value="1" min="1">
-        <button onclick="alterarQtd(1)">+</button>
+      <button onclick="alterarQtd(-1)">-</button>
+      <input type="number" id="quantidade" value="1" min="1" />
+      <button onclick="alterarQtd(1)">+</button>
     </div>
     <div style="text-align:center; margin-bottom:10px;">
-        <button onclick="abrirModal()">Selecionar Essência</button>
-        <p id="essenciaSelecionada" style="font-style:italic;">Essência: (não selecionada)</p>
+      <button onclick="abrirModal()">Selecionar Essência</button>
+      <p id="essenciaSelecionada" style="margin-top:10px; font-style:italic;">Essência: (não selecionada)</p>
     </div>
     <div style="text-align:center;">
-        <button onclick="adicionarAoCarrinho('Vela Aromática Cappuccino', 65)">Adicionar</button>
+      <button onclick="adicionarAoCarrinho('Vela Aromática Cappuccino', 65)">Adicionar</button>
     </div>
-</div>
+  </div>
 
-<div class="carrinho">
+  <div class="carrinho">
     <h2>Seu Pedido:</h2>
     <ul id="carrinho"></ul>
     <p><strong>Total: R$ <span id="total">0</span></strong></p>
+    <button class="limpar-btn" onclick="limparCarrinho()">Limpar Carrinho</button><br><br>
     <a id="enviar" href="#" target="_blank"><button>Enviar pedido via WhatsApp</button></a>
-</div>
+  </div>
 
-<div id="modalEssencia" class="modal">
+  <div id="modalEssencia" class="modal">
     <div class="modal-content">
-        <span class="close" onclick="fecharModal()">&times;</span>
-        <label for="essenciaSelect"><strong>Escolha a Essência:</strong></label><br>
-        <select id="essenciaSelect" onchange="selecionarEssencia()" style="width: 100%; margin-top:10px;">
-            <option value="">-- Selecione --</option>
-            {essencias_options}
-        </select>
+      <span class="close" onclick="fecharModal()">&times;</span>
+      <label for="essenciaSelect"><strong>Escolha a Essência:</strong></label><br />
+      <select id="essenciaSelect" onchange="selecionarEssencia()" style="width: 100%; margin-top:10px;">
+        <option value="">-- Selecione --</option>
+        <option>Algodão</option>
+        <option>Baunilha</option>
+        <option>Bergamota</option>
+        <option>Café com Chocolate</option>
+        <option>Canela</option>
+        <option>Cappuccino</option>
+        <option>Capim Limão</option>
+        <option>Cassis e Hibisco</option>
+        <option>Cereja e Avelã</option>
+        <option>Chá Verde</option>
+        <option>Flor de Cerejeira</option>
+        <option>Folhas de Figo</option>
+        <option>Lavanda Francesa</option>
+        <option>Melancia</option>
+        <option>Morango</option>
+        <option>Mousse de Maracujá</option>
+        <option>Oceano</option>
+        <option>Pistache</option>
+        <option>Rosas</option>
+        <option>Zimbro e Madeira Guaiac</option>
+      </select>
     </div>
-</div>
+  </div>
 
-<script>
+  <script>
     let carrinho = [];
     let total = 0;
     let essenciaAtual = "";
 
-    function alterarQtd(delta) {{
-        let input = document.getElementById("quantidade");
-        let novaQtd = parseInt(input.value) + delta;
-        input.value = Math.max(1, novaQtd);
-    }}
+    function alterarQtd(delta) {
+      const input = document.getElementById("quantidade");
+      let nova = parseInt(input.value) + delta;
+      input.value = Math.max(1, nova);
+    }
 
-    function abrirModal() {{
-        document.getElementById("modalEssencia").style.display = "block";
-    }}
+    function abrirModal() {
+      document.getElementById("modalEssencia").style.display = "block";
+    }
 
-    function fecharModal() {{
-        document.getElementById("modalEssencia").style.display = "none";
-    }}
+    function fecharModal() {
+      document.getElementById("modalEssencia").style.display = "none";
+    }
 
-    function selecionarEssencia() {{
-        const select = document.getElementById("essenciaSelect");
-        essenciaAtual = select.value;
-        document.getElementById("essenciaSelecionada").innerText = "Essência: " + (essenciaAtual || "(não selecionada)");
+    function selecionarEssencia() {
+      const select = document.getElementById("essenciaSelect");
+      essenciaAtual = select.value;
+      document.getElementById("essenciaSelecionada").innerText =
+        "Essência: " + (essenciaAtual || "(não selecionada)");
+      fecharModal();
+    }
+
+    function adicionarAoCarrinho(produto, preco) {
+      const qtd = parseInt(document.getElementById("quantidade").value);
+      if (!essenciaAtual) {
+        alert("Por favor, selecione a essência.");
+        return;
+      }
+      carrinho.push({ produto, preco, quantidade: qtd, essencia: essenciaAtual });
+      atualizarCarrinho();
+    }
+
+    function removerItem(index) {
+      carrinho.splice(index, 1);
+      atualizarCarrinho();
+    }
+
+    function limparCarrinho() {
+      carrinho = [];
+      atualizarCarrinho();
+    }
+
+    function atualizarCarrinho() {
+      const lista = document.getElementById("carrinho");
+      lista.innerHTML = "";
+      total = 0;
+      carrinho.forEach((item, index) => {
+        const subtotal = item.preco * item.quantidade;
+        total += subtotal;
+        const li = document.createElement("li");
+        li.innerHTML = `
+          <strong>${item.quantidade}x ${item.produto}</strong><br>
+          Essência: <em>${item.essencia}</em><br>
+          R$ ${subtotal}<br>
+          <button class="remover" onclick="removerItem(${index})">Remover</button>
+        `;
+        lista.appendChild(li);
+      });
+
+      document.getElementById("total").textContent = total;
+
+      let mensagem = "Olá, gostaria de fazer um pedido:%0A";
+      carrinho.forEach(item => {
+        mensagem += `- ${item.quantidade}x ${item.produto} (${item.essencia}) - R$ ${item.preco * item.quantidade}%0A`;
+      });
+      mensagem += `Total: R$ ${total}`;
+      document.getElementById("enviar").href =
+        `https://wa.me/5547991880797?text=` + mensagem;
+    }
+
+    window.onclick = function(event) {
+      const modal = document.getElementById("modalEssencia");
+      if (event.target === modal) {
         fecharModal();
-    }}
-
-    function adicionarAoCarrinho(produto, preco) {{
-        const qtd = parseInt(document.getElementById("quantidade").value);
-        if (!essenciaAtual) {{
-            alert("Por favor, selecione a essência.");
-            return;
-        }}
-        carrinho.push({{ produto, preco, quantidade: qtd, essencia: essenciaAtual }});
-        atualizarCarrinho();
-    }}
-
-    function atualizarCarrinho() {{
-        const lista = document.getElementById("carrinho");
-        lista.innerHTML = "";
-        total = 0;
-        carrinho.forEach(item => {{
-            const subtotal = item.preco * item.quantidade;
-            total += subtotal;
-            const li = document.createElement("li");
-            li.textContent = item.quantidade + "x " + item.produto + " (" + item.essencia + ") - R$ " + subtotal;
-            lista.appendChild(li);
-        }});
-        document.getElementById("total").innerText = total;
-        let mensagem = "Olá, gostaria de fazer um pedido:%0A";
-        carrinho.forEach(item => {{
-            mensagem += "- " + item.quantidade + "x " + item.produto + " (" + item.essencia + ") - R$ " + (item.preco * item.quantidade) + "%0A";
-        }});
-        mensagem += "Total: R$ " + total;
-        document.getElementById("enviar").href = "https://wa.me/5547991880797?text=" + mensagem;
-    }}
-
-    window.onclick = function(event) {{
-        if (event.target == document.getElementById("modalEssencia")) {{
-            fecharModal();
-        }}
-    }};
-</script>
-
+      }
+    };
+  </script>
 </body>
 </html>
