--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       width: 40px;
       text-align: center;
     }
-    button {
+    select, button {
       background-color: #a3d2ff;
       border: none;
       border-radius: 4px;
@@ -54,6 +54,9 @@
       color: #000;
       cursor: pointer;
       font-weight: bold;
+    }
+    select {
+      width: 100%;
     }
     .remover {
       background-color: #ffb3b3;
@@ -64,175 +67,111 @@
       background-color: #ffc9c9;
       margin-top: 10px;
     }
-    .modal {
-      display: none;
-      position: fixed;
-      z-index: 1;
-      left: 0;
-      top: 0;
-      width: 100%;
-      height: 100%;
-      overflow: auto;
-      background-color: rgba(0,0,0,0.4);
-    }
-    .modal-content {
-      background-color: #fff;
-      margin: 15% auto;
-      padding: 20px;
-      border: 1px solid #888;
-      width: 90%;
-      max-width: 300px;
-      border-radius: 8px;
-    }
-    .close {
-      color: #aaa;
-      float: right;
-      font-size: 28px;
-      font-weight: bold;
-      cursor: pointer;
-    }
   </style>
 </head>
 <body>
-  <h1>Brilho Alado</h1>
+<h1>Brilho Alado</h1>
 
-  <div class="produto">
-    <img src="imagens/Vela_Cappuccino.jpg" alt="Vela Aromática Cappuccino" />
-    <h3>Vela Aromática Cappuccino</h3>
-    <p>R$ 65,00</p>
-    <div class="quantidade">
-      <button onclick="alterarQtd(-1)">-</button>
-      <input type="number" id="quantidade" value="1" min="1" />
-      <button onclick="alterarQtd(1)">+</button>
-    </div>
-    <div style="text-align:center; margin-bottom:10px;">
-      <button onclick="abrirModal()">Selecionar Essência</button>
-      <p id="essenciaSelecionada" style="margin-top:10px; font-style:italic;">Essência: (não selecionada)</p>
-    </div>
-    <div style="text-align:center;">
-      <button onclick="adicionarAoCarrinho('Vela Aromática Cappuccino', 65)">Adicionar</button>
-    </div>
+<div class="produto">
+  <img src="imagens/Vela_Cappuccino.jpg" alt="Vela Aromática Cappuccino" />
+  <h3>Vela Aromática Cappuccino</h3>
+  <p>R$ 65,00</p>
+  <div class="quantidade">
+    <button onclick="alterarQtd('cappuccino', -1)">-</button>
+    <input type="number" id="quantidade_cappuccino" value="1" min="1" />
+    <button onclick="alterarQtd('cappuccino', 1)">+</button>
   </div>
-
-  <div class="carrinho">
-    <h2>Seu Pedido:</h2>
-    <ul id="carrinho"></ul>
-    <p><strong>Total: R$ <span id="total">0</span></strong></p>
-    <button class="limpar-btn" onclick="limparCarrinho()">Limpar Carrinho</button><br><br>
-    <a id="enviar" href="#" target="_blank"><button>Enviar pedido via WhatsApp</button></a>
+  <div style="text-align:center;">
+    <button onclick="adicionarAoCarrinho('Vela Aromática Cappuccino', 65, 'cappuccino')">Adicionar</button>
   </div>
+</div>
 
-  <div id="modalEssencia" class="modal">
-    <div class="modal-content">
-      <span class="close" onclick="fecharModal()">&times;</span>
-      <label for="essenciaSelect"><strong>Escolha a Essência:</strong></label><br />
-      <select id="essenciaSelect" onchange="selecionarEssencia()" style="width: 100%; margin-top:10px;">
-        <option value="">-- Selecione --</option>
-        <option>Algodão</option>
-        <option>Baunilha</option>
-        <option>Bergamota</option>
-        <option>Café com Chocolate</option>
-        <option>Canela</option>
-        <option>Cappuccino</option>
-        <option>Capim Limão</option>
-        <option>Cassis e Hibisco</option>
-        <option>Cereja e Avelã</option>
-        <option>Chá Verde</option>
-        <option>Flor de Cerejeira</option>
-        <option>Folhas de Figo</option>
-        <option>Lavanda Francesa</option>
-        <option>Melancia</option>
-        <option>Morango</option>
-        <option>Mousse de Maracujá</option>
-        <option>Oceano</option>
-        <option>Pistache</option>
-        <option>Rosas</option>
-        <option>Zimbro e Madeira Guaiac</option>
-      </select>
-    </div>
+<div class="produto">
+  <img src="imagens/Vela_Melancia.jpg" alt="Vela Melancia" />
+  <h3>Vela Melancia</h3>
+  <p>Escolha o tamanho:</p>
+  <select id="tamanho_melancia" onchange="atualizarPrecoMelancia()">
+    <option value="180g|50">180g - R$ 50,00</option>
+    <option value="100g|45">100g - R$ 45,00</option>
+  </select>
+  <div class="quantidade">
+    <button onclick="alterarQtd('melancia', -1)">-</button>
+    <input type="number" id="quantidade_melancia" value="1" min="1" />
+    <button onclick="alterarQtd('melancia', 1)">+</button>
   </div>
+  <div style="text-align:center;">
+    <button onclick="adicionarVelaMelancia()">Adicionar</button>
+  </div>
+</div>
 
-  <script>
-    let carrinho = [];
-    let total = 0;
-    let essenciaAtual = "";
+<div class="carrinho">
+  <h2>Seu Pedido:</h2>
+  <ul id="carrinho"></ul>
+  <p><strong>Total: R$ <span id="total">0</span></strong></p>
+  <button class="limpar-btn" onclick="limparCarrinho()">Limpar Carrinho</button><br><br>
+  <a id="enviar" href="#" target="_blank"><button>Enviar pedido via WhatsApp</button></a>
+</div>
 
-    function alterarQtd(delta) {
-      const input = document.getElementById("quantidade");
-      let nova = parseInt(input.value) + delta;
-      input.value = Math.max(1, nova);
-    }
+<script>
+  let carrinho = [];
+  let total = 0;
 
-    function abrirModal() {
-      document.getElementById("modalEssencia").style.display = "block";
-    }
+  function alterarQtd(id, delta) {
+    const input = document.getElementById("quantidade_" + id);
+    let novaQtd = parseInt(input.value) + delta;
+    input.value = Math.max(1, novaQtd);
+  }
 
-    function fecharModal() {
-      document.getElementById("modalEssencia").style.display = "none";
-    }
+  function adicionarAoCarrinho(produto, preco, id) {
+    const quantidade = parseInt(document.getElementById("quantidade_" + id).value);
+    carrinho.push({ produto, preco, quantidade });
+    atualizarCarrinho();
+  }
 
-    function selecionarEssencia() {
-      const select = document.getElementById("essenciaSelect");
-      essenciaAtual = select.value;
-      document.getElementById("essenciaSelecionada").innerText =
-        "Essência: " + (essenciaAtual || "(não selecionada)");
-      fecharModal();
-    }
+  function adicionarVelaMelancia() {
+    const select = document.getElementById("tamanho_melancia").value.split("|");
+    const tamanho = select[0];
+    const preco = parseFloat(select[1]);
+    const quantidade = parseInt(document.getElementById("quantidade_melancia").value);
+    const produto = "Vela Melancia " + tamanho;
+    carrinho.push({ produto, preco, quantidade });
+    atualizarCarrinho();
+  }
 
-    function adicionarAoCarrinho(produto, preco) {
-      const qtd = parseInt(document.getElementById("quantidade").value);
-      if (!essenciaAtual) {
-        alert("Por favor, selecione a essência.");
-        return;
-      }
-      carrinho.push({ produto, preco, quantidade: qtd, essencia: essenciaAtual });
-      atualizarCarrinho();
-    }
+  function removerItem(index) {
+    carrinho.splice(index, 1);
+    atualizarCarrinho();
+  }
 
-    function removerItem(index) {
-      carrinho.splice(index, 1);
-      atualizarCarrinho();
-    }
+  function limparCarrinho() {
+    carrinho = [];
+    atualizarCarrinho();
+  }
 
-    function limparCarrinho() {
-      carrinho = [];
-      atualizarCarrinho();
-    }
+  function atualizarCarrinho() {
+    const lista = document.getElementById("carrinho");
+    lista.innerHTML = "";
+    total = 0;
+    carrinho.forEach((item, index) => {
+      const subtotal = item.preco * item.quantidade;
+      total += subtotal;
+      const li = document.createElement("li");
+      li.innerHTML = `
+        <strong>${item.quantidade}x ${item.produto}</strong><br>
+        R$ ${subtotal}<br>
+        <button class="remover" onclick="removerItem(${index})">Remover</button>
+      `;
+      lista.appendChild(li);
+    });
 
-    function atualizarCarrinho() {
-      const lista = document.getElementById("carrinho");
-      lista.innerHTML = "";
-      total = 0;
-      carrinho.forEach((item, index) => {
-        const subtotal = item.preco * item.quantidade;
-        total += subtotal;
-        const li = document.createElement("li");
-        li.innerHTML = `
-          <strong>${item.quantidade}x ${item.produto}</strong><br>
-          Essência: <em>${item.essencia}</em><br>
-          R$ ${subtotal}<br>
-          <button class="remover" onclick="removerItem(${index})">Remover</button>
-        `;
-        lista.appendChild(li);
-      });
-
-      document.getElementById("total").textContent = total;
-
-      let mensagem = "Olá, gostaria de fazer um pedido:%0A";
-      carrinho.forEach(item => {
-        mensagem += `- ${item.quantidade}x ${item.produto} (${item.essencia}) - R$ ${item.preco * item.quantidade}%0A`;
-      });
-      mensagem += `Total: R$ ${total}`;
-      document.getElementById("enviar").href =
-        `https://wa.me/5547991880797?text=` + mensagem;
-    }
-
-    window.onclick = function(event) {
-      const modal = document.getElementById("modalEssencia");
-      if (event.target === modal) {
-        fecharModal();
-      }
-    };
-  </script>
+    document.getElementById("total").textContent = total;
+    let mensagem = "Olá, gostaria de fazer um pedido:%0A";
+    carrinho.forEach(item => {
+      mensagem += `- ${item.quantidade}x ${item.produto} - R$ ${item.preco * item.quantidade}%0A`;
+    });
+    mensagem += `Total: R$ ${total}`;
+    document.getElementById("enviar").href = "https://wa.me/5547991880797?text=" + mensagem;
+  }
+</script>
 </body>
 </html>
